--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "connected-react-router": "^6.8.0",
+    "core-js": "^3.6.5",
+    "history": "^5.0.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-localstore": "^1.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
