--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.1",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.3",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.6.5",
     "history": "^5.0.0",
@@ -16,6 +17,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
