--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-localstore": "^1.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
